refactor(ui): remove semantic from workflow summary

--- a/ui/src/app/views/workflow/run/summary/workflow.run.summary.html
+++ b/ui/src/app/views/workflow/run/summary/workflow.run.summary.html
@@ -26,10 +26,12 @@
                         <button nz-button *ngIf="direction === 'TB'" class="direction"
                                 (click)="changeDirection()">
                             <i nz-icon nzType="arrow-right" nzTheme="outline"></i>
+                            Workflow layout
                         </button>
                         <button nz-button *ngIf="direction === 'LR'" class="direction"
                                 (click)="changeDirection()">
                             <i nz-icon nzType="arrow-down" nzTheme="outline"></i>
+                            Workflow layout
                         </button>
                     </nz-col>
                     <nz-col [nzSpan]="10" class="center">
