--- a/ui/src/theme.scss
+++ b/ui/src/theme.scss
@@ -2,7 +2,7 @@
 $darkBackground: #1b1c1d;
 
 $darkTheme_grey_0: #2d2c2c; // top bar and active|hover on darkTheme_grey_1 background
-$darkTheme_grey_1: #383736;
+$darkTheme_grey_1: #1f1f1f;
 $darkTheme_grey_2: #333333;
 $darkTheme_grey_3: #434141;
 $darkTheme_grey_4: #494949;
