--- a/ui/src/ngzorro.dark.less
+++ b/ui/src/ngzorro.dark.less
@@ -30,3 +30,14 @@ textarea:read-only {
 .entity-card:hover {
   background: #3a3a3a;
 }
+
+nz-card.redTitle {
+  .ant-card-head {
+    background-color: #a61d24;
+  }
+}
+nz-card.coloredTitle {
+  .ant-card-head {
+    background-color: #1f1f1f;
+  }
+}
