--- a/ui/src/app/views/project/show/admin/project.admin.html
+++ b/ui/src/app/views/project/show/admin/project.admin.html
@@ -1,5 +1,5 @@
 <div id="projectAdmin">
-    <nz-card nzTitle="Project configuration" >
+    <nz-card nzTitle="Settings" class="coloredTitle">
         <form nz-form (ngSubmit)="onSubmitProjectUpdate()" #projectUpdateFrom="ngForm">
             <nz-form-item>
                 <nz-form-label [nzSpan]="3">Project name</nz-form-label>
@@ -40,13 +40,13 @@
             </nz-form-item>
         </form>
     </nz-card>
-    <nz-card nzTitle="Link to a repository manager">
+    <nz-card nzTitle="Link to a repository manager" class="coloredTitle">
         <app-repomanager-form [project]="project"></app-repomanager-form>
         <app-project-repomanager-list *ngIf="project.vcs_servers && project.vcs_servers.length > 0"
                                       [project]="project" [reposmanagers]="project.vcs_servers"
         ></app-project-repomanager-list>
     </nz-card>
-    <nz-card nzTitle="Danger zone">
+    <nz-card nzTitle="Danger zone" class="redTitle">
         <nz-row>
             <nz-col [nzSpan]="12">
                 <div class="title">Delete project</div>
